            - fixed missing update of tab 3 on "undo_changes()"
            - added "defaults" table to help on control reset to default
            - removed "dialog.info()" and "dialog.msg()"
            - added "update_saved_rules_values()" to enable insert + remove content from table without saving current changes
            - changed maybe some more tiny things :)

    - update: "cfg/cfg.lua"  / by jrock
        - added default values for "freshstuff_version" + "logfilesize"
        
    - update: "core/util.lua"  / by jrock
        - changed "savetable()" to accept a direct return instead of saving the data first in an variable

    - update: "core/announce.lua"  / by jrock
        - remove "lfs_a()" shortcut and use original "lfs_attributes()" instead
    
    
v0.8 [2015-]

    NEW Project member: jrock

    - update: "docs/LICENSE"  / by pulsar
        - changed from "GPLv2" to "GPLv3"

    - added: "lib/ressources/png/GPLv3_160x80.png"  / by pulsar
    - added: "lib/ressources/png/applogo_96x96.png"  / by pulsar
    - added: "cfg/categories.lua"  / by jrock

    - update: "Announcer.wx.lua"  / by pulsar
        - fixed small issue with blacklist/whitelist dialog window  / thx Sopor
            - disable announcer window in background till popup is open
        - changed about window
            - added new license
            - added jrock as new project member
        - removed unneeded commented code parts
        - added optional parameter "both" for log_handler() function
        - recompiled "client.dll"
        - added integrity_check() function  / requested by Sopor
        - added add_statusbar() function
        - added menu_item() helper function
        - added add_menubar() function
        - added icons for menubar & taskbar trayicon menu
        - added imports, cache tables on start
        - removed unused table loads
        - added refresh timer for the new filesize gauge on tab 6