@@ -110,6 +110,7 @@ v0.9 [2016-]
             - added "defaults" table to help on control reset to default
             - removed "dialog.info()" and "dialog.msg()"
             - added "update_saved_rules_values()" to enable insert + remove content from table without saving current changes
+            - fixed issue with regex on "log_broadcast()"
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
